--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
@@ -116,8 +116,8 @@
 			else
 				toastr.error(response.Message, "Change Address");
 		}
-		$("#btnsubmit").prop("disabled", false);
-		$("#btnCancel").prop("disabled", false);
+		$("#btnsubmitAddress").prop("disabled", false);
+		$("#btnCancelAddress").prop("disabled", false);
 	}
 	
 </script>
