--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
@@ -41,8 +41,8 @@
 			}
 			toastr.error(response.Message);
 		}
-		$("#btnsubmit").prop("disabled", false);
-		$("#btnCancel").prop("disabled", false);
+		$("#btnsubmitEmail").prop("disabled", false);
+		$("#btnCancelEmail").prop("disabled", false);
 	}
 </script>
 
