--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
@@ -36,8 +36,8 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-						<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+						<button class="btn btn-secondary float-left mr-3" id="btnCancelPassword" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+						<button class="btn btn-orange" id="btnsubmitPassword" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 					</div>
 				</div>
 				}
@@ -63,7 +63,7 @@
 			}
 			toastr.error(response.Message, "Change Password");
 		}
-		$("#btnsubmit").prop("disabled", false);
-		$("#btnCancel").prop("disabled", false);
+		$("#btnsubmitPassword").prop("disabled", false);
+		$("#btnCancelPassword").prop("disabled", false);
 	}
 </script>
