--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
@@ -46,8 +46,8 @@
 			}
 			toastr.error(response.Message, "Change Phone");
 		}
-		$("#btnsubmit").prop("disabled", false);
-		$("#btnCancel").prop("disabled", false);
+		$("#btnsubmitPhone").prop("disabled", false);
+		$("#btnCancelPhone").prop("disabled", false);
 	}
 </script>
 
