modified menubar to be common in Layout

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -167,8 +167,8 @@
 				$("#exampleModalCenter").modal();
 			});
 
-			$("#current-Events").hide();
-			$("#userList").hide();
+			//$("#current-Events").hide();
+			//$("#userList").hide();
 
 			$('[data-toggle="tooltip"]').tooltip({ position: 'right' });
 
