--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Admin/Index.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Admin/Index.cshtml
@@ -89,9 +89,9 @@
 <script>
 
 	$(document).ready(function () {
-		$("#programEventRegistration").hide();
-		$("#MyAccount").hide();
-		$("#userList").show();
+		//$("#programEventRegistration").hide();
+		//$("#MyAccount").hide();
+		//$("#userList").show();
 		$("#cart").hide();
 
 		function format(Id, tr, row) {
