--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -28,11 +28,17 @@
 					<a class="fas fa-plus" href="#"></a>
 				</div>
 			</div>
-			<div class="header_nav">
+			@if (Session["Menu"] == null)
+			{
+					Session["Menu"] = @Html.Action("_MainMenu", "Base");
+			}
+			@Session["Menu"]
+			@*<div class="header_nav">
 				<nav class="navbar navbar-expand-lg navbar-light">
 					<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
+
 							<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
 							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
 							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
@@ -51,7 +57,7 @@
 						</div>
 					</div>
 				</nav>
-			</div>
+			</div>*@
 		</header>
 		<div class="theme_bg">
 			@RenderBody()
