Deleted <Html>, <scripts> in views

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Chinmaya.Registration.Models.MyAccountModel
+﻿@model Chinmaya.Registration.Models.MyAccountModel
 @using Chinmaya.Models
 @{
 	Layout = "~/Views/Shared/_Layout.cshtml";
