--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -5,8 +5,6 @@
 	ViewBag.Title = "Event";
 }
 
-@*<html>
-<head>*@
 	<link href="~/Content/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
 	<link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
 	<script src="~/Scripts/bootstrap-datepicker.min.js"></script>
@@ -18,23 +16,6 @@
 			color: red;
 		}
 	</style>
-
-	@*<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Welcome to Chinmaya Mission</title>
-	<!-- Latest compiled and minified CSS -->
-	<link href="~/Content/bootstrap.min.css" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<!-- Custom CSS -->
-	<link href="~/Content/custom-styles.css" rel="stylesheet" type="text/css">
-	<!-- Jquery -->
-	<script src="~/Scripts/jquery-3.3.1.js"></script>*@
-@*</head>
-
-<body>*@
-
 
 	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
 	<div class="nav-side-menu">
@@ -48,8 +29,6 @@
 
 				<ul class="sub-menu collapse" id="account">
 					<li><a class="Password" data-toggle="modal" data-target="#changePassword"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
-					@*<li><a href="#"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>*@
-					@*<li class="active"><a href="#"><img alt="" src="~/Content/img/update-family-info-active.png"> Update Family Info</a></li>*@
 				</ul>
 
 				<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
@@ -64,7 +43,6 @@
 		</div>
 	</div>
 	<div class="bd-content">
-		@*<h3 class="bd-title">My Account</h3>*@
 		<div class="inner-box">
 			<div class="row mb-3">
 				<div class="col-md-6 table-title">Event Information</div>
@@ -104,7 +82,7 @@
 	<!-- Modal -->
 
 	<div tabindex="-1" class="modal fade bd-example-modal-lg" id="eventModal" role="dialog" aria-hidden="true" aria-labelledby="eventModalTitle">
-		@using (Html.BeginForm("AddEvent", "Event", FormMethod.Post))
+		@using (Html.BeginForm("AddEvent", "Event", FormMethod.Post, new { id = "eventForm" }))
 		{
 			@Html.AntiForgeryToken()
 			<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -159,7 +137,6 @@
 							</div>
 							<div class="col-md-4" id="StartDate">
 								@Html.LabelFor(m => m.events.StartDate)
-								@*@Html.TextBoxFor(m => m.events.StartDate, new { @class = "form-control", @type = "date", @Name = "StartDate" })*@
 								<div class="input-group date">
 									@Html.TextBoxFor(m => m.events.StartDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "StartDate", @value = "" })
 									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
@@ -168,7 +145,6 @@
 							</div>
 							<div class="col-md-4" id="EndDate">
 								@Html.LabelFor(m => m.events.EndDate)
-								@*@Html.TextBoxFor(m => m.events.EndDate, new { @class = "form-control", @type = "date", @Name = "EndDate" })*@
 								<div class="input-group date">
 									@Html.TextBoxFor(m => m.events.EndDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "EndDate", @value = "" })
 									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
@@ -196,7 +172,6 @@
 										<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
 									</span>
 								</div>
-								@*@Html.TextBoxFor(m => m.events.EndTime, new { @class = "form-control", @Name = "EndTime" })*@
 								@Html.ValidationMessageFor(m => m.events.EndTime)
 							</div>
 							<div class="col-md-4">
@@ -232,7 +207,6 @@
 							</div>
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.events.HolidayDate)
-								@*@Html.TextBoxFor(m => m.events.HolidayDate, new { @class = "form-control", @type = "date", @Name = "HolidayDate" })*@
 								<div class="input-group date">
 									@Html.TextBoxFor(m => m.events.HolidayDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "HolidayDate", @value = "" })
 									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
@@ -280,7 +254,7 @@
 		});
 
 		$(document).ready(function () {
-			
+			$.validator.unobtrusive.parse($("eventForm"));
 			$("#timepicker").datetimepicker({
 				pickDate: false,
 				pickSeconds: false
@@ -340,6 +314,4 @@
 			$(this).removeData('bs.modal');
 		});
 	</script>
-@*</body>
-</html>*@
 
