--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
@@ -4,23 +4,7 @@
 	ViewBag.Title = "ClassesConfirm";
 }
 @Html.Raw(TempData["msg"])
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Welcome to Chinmaya Mission</title>
-	<!-- Latest compiled and minified CSS -->
-	<link href="~/Content/bootstrap.min.css" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<!-- Custom CSS -->
-	<link href="~/Content/custom-styles.css" rel="stylesheet" type="text/css">
-	<!-- Jquery -->
-	<script src="~/Content/jquery-3.3.1.js"></script>
-</head>
-<body class="theme_bg">
-	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
 	<div class="nav-side-menu">
 
 		<div class="menu-list">
@@ -106,7 +90,6 @@
 												@foreach (var ev in item.Events)
 												{
 													<tr>
-														@*<td>@ev.Name</td>*@
 														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
 														<td>@ev.Weekday</td>
 														<td>$@ev.ChangeAmount</td>
@@ -155,10 +138,7 @@
 			}
 		}
 	</div>
-	<!-- Latest compiled and minified JavaScript -->
-	@*<script src="~/Content/bootstrap.min.js"></script>*@
-</body>
-</html>
+
 <script>
 	$(document).ready(function () {
 		$("#current-Events").hide();
@@ -177,23 +157,19 @@
 				"data": "directoryCheckBox",
 				success: function (ok) {
 					var content = "you have been successfully added to Chinmaya Directory";
-					alert(content);
-
-					//$.confirm({
-					//	title: 'Alert!',
-					//	content: content,
-					//	buttons: {
-					//		confirm: {
-					//			text: 'Okay',
-					//			btnClass: 'btn-blue',
-					//			keys: ['enter', 'shift'],
-					//			action: function () {
-					//				$.alert(content);
-
-					//			}
-					//		}
-					//	}
-					//});
+					$.confirm({
+						title: 'Alert!',
+						content: content,
+						buttons: {
+							confirm: {
+								text: 'Okay',
+								btnClass: 'btn-blue',
+								keys: ['enter', 'shift'],
+								action: function () {
+								}
+							}
+						}
+					});
 				},
 
 			});
