--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -46,7 +46,9 @@
 		<div class="inner-box">
 			<div class="row mb-3">
 				<div class="col-md-6 table-title">Event Information</div>
-				<div class="col-md-6 text-right"><a class="orange-links" href="#" data-target="#eventModal" data-toggle="modal"><i class="material-icons">add_circle_outline</i> Add Event</a></div>
+				<div class="col-md-6 text-right">
+					<a class="orange-links" id="AddEvent" href="#"><i class="material-icons">add_circle_outline</i> Add Event</a>
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 table-responsive">
@@ -65,13 +67,13 @@
 
 							@foreach (var ev in Model.currentEventModel)
 							{
-								<tr>
-									<td>@ev.Name</td>
-									<td>@ev.Weekday</td>
-									<td>@ev.Frequency</td>
-									<td>$@ev.ChangeAmount</td>
-									<td><a href="@Url.Action("Edit","Account", new { id = ev.Id })"><span class="label label-orange">Edit</span></a></td>
-								</tr>
+							<tr>
+								<td>@ev.Name</td>
+								<td>@ev.Weekday</td>
+								<td>@ev.Frequency</td>
+								<td>$@ev.ChangeAmount</td>
+								<td id="@ev.Id" class="editEvent"><a href="#" data-toggle="modal" data-target="#EditEventModal" class="Edit"><span class="label label-orange">Edit</span></a></td>
+							</tr>
 							}
 						</tbody>
 					</table>
@@ -82,149 +84,9 @@
 	<!-- Modal -->
 
 	<div tabindex="-1" class="modal fade bd-example-modal-lg" id="eventModal" role="dialog" aria-hidden="true" aria-labelledby="eventModalTitle">
-		@using (Html.BeginForm("AddEvent", "Event", FormMethod.Post, new { id = "eventForm" }))
-		{
-			@Html.AntiForgeryToken()
-			<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-				<div class="modal-content">
-					<div class="modal-body">
-						<h5 class="modal-title">Add Event</h5>
+		
+		@Html.Partial("../Event/_AddEvent", Model.events)
 
-						@Html.ValidationSummary(true)
-
-						<div class="row">
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.Name)
-								@Html.TextBoxFor(m => m.events.Name, new { @class = "form-control", @Name = "Name" })
-								@Html.ValidationMessageFor(m => m.events.Name)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.Description)
-								@Html.TextBoxFor(m => m.events.Description, new { @class = "form-control", @Name = "Description" })
-								@Html.ValidationMessageFor(m => m.events.Description)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.WeekdayId)
-								@Html.DropDownList("WeekdayId", new SelectList(Model.weekday, "Id", "Name", ViewBag.SelectedWeekday), "Select", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.events.WeekdayId)
-							</div>
-						</div>
-
-						<div class="row">
-
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.FrequencyId)
-								@Html.DropDownList("FrequencyId", new SelectList(Model.frequencies, "Id", "Name", ViewBag.SelectedFrequency), "Select", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.events.FrequencyId)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.AgeFrom)
-								@Html.TextBoxFor(m => m.events.AgeFrom, new { @class = "form-control", @Name = "AgeFrom" })
-								@Html.ValidationMessageFor(m => m.events.AgeFrom)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.AgeTo)
-								@Html.TextBoxFor(m => m.events.AgeTo, new { @class = "form-control", @Name = "AgeTo" })
-								@Html.ValidationMessageFor(m => m.events.AgeTo)
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.SessionId)
-								@Html.DropDownList("SessionId", new SelectList(Model.sessions, "Id", "Name"), "Select", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.events.SessionId)
-							</div>
-							<div class="col-md-4" id="StartDate">
-								@Html.LabelFor(m => m.events.StartDate)
-								<div class="input-group date">
-									@Html.TextBoxFor(m => m.events.StartDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "StartDate", @value = "" })
-									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
-								</div>
-								@Html.ValidationMessageFor(m => m.events.StartDate)
-							</div>
-							<div class="col-md-4" id="EndDate">
-								@Html.LabelFor(m => m.events.EndDate)
-								<div class="input-group date">
-									@Html.TextBoxFor(m => m.events.EndDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "EndDate", @value = "" })
-									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
-								</div>
-								@Html.ValidationMessageFor(m => m.events.EndDate)
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.StartTime)
-								<div id ="timepicker1" class="input-append">
-									@Html.TextBoxFor(m => m.events.StartTime, "{0:hh:mm}", new {@id = "timepicker", @class= "form-control", @type = "text", @Name = "StartTime", @value = "" })
-									<span class="add-on">
-										<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-									</span>
-								</div>
-								@Html.ValidationMessageFor(m => m.events.StartTime)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.EndTime)
-								<div id="timepicker" class="input-append time">
-									@Html.TextBoxFor(m => m.events.EndTime, new { @class = "form-control", @type = "text", @Name = "EndTime", @Id = "EndTime" })
-									<span class="add-on">
-										<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-									</span>
-								</div>
-								@Html.ValidationMessageFor(m => m.events.EndTime)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.Amount)
-								@Html.TextBoxFor(m => m.events.Amount, new { @class = "form-control", @Name = "Amount" })
-								@Html.ValidationMessageFor(m => m.events.Amount)
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.Location)
-								@Html.TextBoxFor(m => m.events.Location, new { @class = "form-control", @Name = "Location" })
-								@Html.ValidationMessageFor(m => m.events.Location)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.Instructor)
-								@Html.TextBoxFor(m => m.events.Instructor, new { @class = "form-control", @Name = "Instructor" })
-								@Html.ValidationMessageFor(m => m.events.Instructor)
-							</div>
-							<div class="col-md-4">
-								@Html.LabelFor(m => m.events.Contact)
-								@Html.TextBoxFor(m => m.events.Contact, new { @class = "form-control", @Name = "Contact" })
-								@Html.ValidationMessageFor(m => m.events.Contact)
-							</div>
-
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								@Html.LabelFor(m => m.events.Other)
-								@Html.TextBoxFor(m => m.events.Other, new { @class = "form-control", @Name = "Other" })
-								@Html.ValidationMessageFor(m => m.events.Other)
-							</div>
-							<div class="col-md-6">
-								@Html.LabelFor(m => m.events.HolidayDate)
-								<div class="input-group date">
-									@Html.TextBoxFor(m => m.events.HolidayDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "HolidayDate", @value = "" })
-									<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
-								</div>
-								@Html.ValidationMessageFor(m => m.events.HolidayDate)
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<button class="btn btn-secondary float-left mr-3" id="#btnCancel " type="submit" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-								<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		}
 	</div>
 	<div class="modal fade bd-example-modal-lg" id="changePassword" tabindex="-1" role="dialog">
 
@@ -254,7 +116,11 @@
 		});
 
 		$(document).ready(function () {
-			$.validator.unobtrusive.parse($("eventForm"));
+			$("#AddEvent").on("click", function () {
+				$("#eventModal").load("/Event/RefreshEventPartialView");
+				$("#eventModal").modal();
+			});
+			
 			$("#timepicker").datetimepicker({
 				pickDate: false,
 				pickSeconds: false
@@ -267,6 +133,18 @@
 				dateFormat: 'mm/dd/yyyy',
 				startDate: "today",
 				endDate: '+10y'
+			});
+
+			$(".editEvent").click(function () {
+				var id = $(this).attr("id");
+				$.ajax({
+					"url": "../Event/EditEvent/" + id,
+					"type": "GET",
+					success: function (data) {
+						$("#eventModal").html(data);
+						$("#eventModal").modal();
+					},
+				});
 			});
 
 		});
@@ -307,11 +185,17 @@
 			});
 		});
 
-		$("#eventModal").on("hidden.bs.modal", function () {
-			$('[data-toggle="tooltip"]').tooltip();
-			$('#eventModal').find('input:text, input:password, select, textarea').val('');
-			$('#eventModal').find('input:radio, input:checkbox').prop('checked', false);
-			$(this).removeData('bs.modal');
+		$(function () {
+			$('.modal').on('hidden.bs.modal', function (e) {
+				$(this)
+					.find("input:text, input:password, input:hidden, select, textarea")
+					.val('');
+				$("input[type=date]").val("");
+
+				$(this)
+					.find(".field-validation-error")
+					.html('');
+			});
 		});
 	</script>
 
